<resources>
    <string name="app_name">Music To Color</string>

    <string name="label_waveform">Waveform:</string>
    <string name="label_equalizer">Equalizer:</string>
    <string name="label_color">Color:</string>
    <string name="label_hex">HEX:</string>
    <string name="label_hz">Hz</string>
    <string name="label_db">dB</string>

    <string name="label_music_attribution">Now Playing:\nCharlie Parra del Riego - Dragon Ball Z Metal</string>

    <string name="hint_equalizer">Adjust the bands to see how the color changes.</string>

    <string name="action_about">About</string>

    <string name="git_hub_repo_url">https://github.com/RacZo/MusicToColor</string>

</resources>
